added imgs and what im learning

--- a/index.html
+++ b/index.html
@@ -5,17 +5,38 @@
     <link rel="stylesheet" type="text/css" href="style/main.css" />
   </head>
   <body>
-    <nav>
-        <ul>
-            <li><a href="#">Learning</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Projects</a></li>
-        </ul>
-    </nav>
     <header>
+      <nav>
+        <ul>
+          <li>
+            <a href="#">Learning</a>
+          </li>
+          <li>
+            <a href="#">About</a>
+          </li>
+          <li>
+            <a href="#">Projects</a>
+          </li>
+        </ul>
+      </nav>
       <h1>Nic Saunders</h1>
       <h2>Web Developer</h2>
       <h3>Learning to code - one byte at a time</h3>
     </header>
+    <section>
+      <h2>Learning</h2>
+      <div>
+        <img src="img/html.png">
+        <p>HTML is what I am learning to build the structure and content of web pages.</p>
+      </div>
+      <div>
+        <img src="img/css.png">
+        <p>CSS will be used to make the web pages pretty, and add some colour.</p>
+      </div>
+      <div>
+        <img src="img/js.png">
+        <p>Finally I will be learning some Javascript to make things happen!</p>
+      </div>
+    </section>
   </body>
 </html>
