about me and projects section

--- a/index.html
+++ b/index.html
@@ -38,5 +38,17 @@
         <p>Finally I will be learning some Javascript to make things happen!</p>
       </div>
     </section>
+    <section>
+      <h2>About me</h2>
+      <p>drjdh kgkdfjh gkldfjh gjkhdhfd gjk dhfghsd f jhfhfj fhjjfj fjjj jjjjj</p>
+    </section>
+    <section>
+      <h2>Projects</h2>
+      <ul>
+         <li>
+            no projects yet
+         </li>
+      </ul>
+    </section>
   </body>
 </html>
