added id tags to sections and made links work

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
       <nav>
         <ul>
           <li>
-            <a href="#">Learning</a>
+            <a href="#learning">Learning</a>
           </li>
           <li>
-            <a href="#">About</a>
+            <a href="#about">About</a>
           </li>
           <li>
-            <a href="#">Projects</a>
+            <a href="#projects">Projects</a>
           </li>
         </ul>
       </nav>
@@ -23,7 +23,7 @@
       <h2>Web Developer</h2>
       <h3>Learning to code - one byte at a time</h3>
     </header>
-    <section>
+    <section id="learning">
       <h2>Learning</h2>
       <div>
         <img src="img/html.png">
@@ -38,11 +38,11 @@
         <p>Finally I will be learning some Javascript to make things happen!</p>
       </div>
     </section>
-    <section>
+    <section id="about">
       <h2>About me</h2>
       <p>drjdh kgkdfjh gkldfjh gjkhdhfd gjk dhfghsd f jhfhfj fhjjfj fjjj jjjjj</p>
     </section>
-    <section>
+    <section id="projects">
       <h2>Projects</h2>
       <ul>
          <li>
