--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h3>Learning to code - one byte at a time</h3>
     </header>
     <section id="learning">
-      <h2>Learning</h2>
+      <h2>What i'm learning</h2>
       <div>
         <img src="img/html.png">
         <p>HTML is what I am learning to build the structure and content of web pages.</p>
