--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Nic Saunders - Web Developer</title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
@@ -16,7 +17,7 @@
             <a href="#about">About</a>
           </li>
           <li>
-            <a href="#projects">Projects</a>
+            <a href="#experiments">Experiments</a>
           </li>
         </ul>
       </nav>
@@ -25,7 +26,7 @@
       <h3>Learning to code - one byte at a time</h3>
     </header>
     <section id="learning">
-      <h2>What i'm learning</h2>
+      <h2>What i'm Learning</h2>
       <div>
         <img src="img/html.png">
         <p>HTML is what I am learning to build the structure and content of web pages.</p>
@@ -40,17 +41,24 @@
       </div>
     </section>
     <section id="about">
-      <h2>About me</h2>
-      <p>drjdh kgkdfjh gkldfjh gjkhdhfd gjk dhfghsd f jhfhfj fhjjfj fjjj jjjjj</p>
+      <h2>A Little bit about me</h2>
+      <p>Sixeen year old coder from Melbourne Australia. Starting coding 1.5 months ago, learning basic HTML, CSS,
+        Javascript and eventually some backend languages (PHP and SQL).</p>
     </section>
-    <section id="projects">
-      <h2>Projects</h2>
+    <section id="experiments">
+      <h2>Some of my Experiments</h2>
       <ul>
          <li>
-            no projects yet
+            <a href="#">Nothing to see yet</a>
+         </li>
+         <li>
+            <a href="#">I haven't done anything other than this page</a>
+         </li>
+         <li>
+            <a href="#">You like like an avocado</a>
          </li>
       </ul>
     </section>
-    <footer>Copyright 2016 Nic Saunders</footer>
+    <footer>© Copyright 2016 Nic Saunders</footer>
   </body>
 </html>
