added profile image and made it look like an egg

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       <h2>A Little bit about me</h2>
       <p>Sixeen year old coder from Melbourne Australia. Starting coding 1.5 months ago, learning basic HTML, CSS,
         Javascript and eventually some backend languages (PHP and SQL).</p>
+      <img src="img/nic.jpg" id="profile-image">
     </section>
     <section id="experiments">
       <h2>Some of my Experiments</h2>
