--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="fixed-nav-bar">
         <ul>
           <li>
             <a href="#learning">Learning</a>
