Revert "sticky nav bar try 2"
This reverts commit d3b1e879c09edfb6c97842b8d931c26604014a80.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <nav class="fixed-nav-bar">
+      <nav>
         <ul>
           <li>
             <a href="#learning">Learning</a>
